messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: messaging-app
    version: blue  # Initially points to blue
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service-green
spec:
  selector:
    app: messaging-app
    version: green
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
